[gd_scene load_steps=55 format=3 uid="uid://br3bss6kac8pa"]

[ext_resource type="Script" path="res://main.gd" id="1_cagca"]
[ext_resource type="Texture2D" uid="uid://cc0nte5jo30nw" path="res://skymap2.jpg" id="2_8tx6u"]
[ext_resource type="PackedScene" uid="uid://dd35twe7yvkqf" path="res://FlatDisplay.tscn" id="3_o8mx1"]
[ext_resource type="AudioStream" uid="uid://bsjqi4woew17c" path="res://sounds/click.wav" id="4_db5t8"]
[ext_resource type="Script" path="res://HandJoints.gd" id="4_eaqi8"]
[ext_resource type="PackedScene" uid="uid://ctltchlf2j2r4" path="res://addons/xr-simulator/XRSimulator.tscn" id="4_pcb8h"]
[ext_resource type="Script" path="res://tapspark.gd" id="5_h5o8j"]
[ext_resource type="AudioStream" uid="uid://d16iuihmmd3xs" path="res://sounds/Velcro_01_audacity.wav" id="5_qinxx"]
[ext_resource type="Script" path="res://PointShader.gd" id="6_yro76"]
[ext_resource type="Shader" path="res://pointshader.gdshader" id="7_y45hs"]
[ext_resource type="Shader" path="res://magictinsel.gdshader" id="10_v7fox"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hftad"]
panorama = ExtResource("2_8tx6u")

[sub_resource type="Sky" id="Sky_tsis2"]
sky_material = SubResource("PanoramaSkyMaterial_hftad")

[sub_resource type="Environment" id="Environment_0xu52"]
background_mode = 2
sky = SubResource("Sky_tsis2")
tonemap_mode = 2
volumetric_fog_emission = Color(0, 0.784314, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wnci2"]
albedo_color = Color(1, 0.121569, 0.121569, 1)

[sub_resource type="BoxMesh" id="BoxMesh_d0w3a"]
material = SubResource("StandardMaterial3D_wnci2")
size = Vector3(0.02, 0.02, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p0287"]
albedo_color = Color(0.00392157, 1, 0.0117647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fmqho"]
material = SubResource("StandardMaterial3D_p0287")
size = Vector3(0.02, 0.02, 0.05)

[sub_resource type="QuadMesh" id="QuadMesh_eslsg"]
size = Vector2(0.8, 0.5)
center_offset = Vector3(0, 0.05, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_46vof"]
viewport_path = NodePath("XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6gabm"]
resource_local_to_scene = true
cull_mode = 2
albedo_color = Color(0, 0.615686, 0.619608, 1)
albedo_texture = SubResource("ViewportTexture_46vof")

[sub_resource type="SphereMesh" id="SphereMesh_65vmt"]
radius = 0.02
height = 0.04

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_brx0b"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yct16"]
size = Vector3(0.01, 0.07, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g60ck"]
albedo_color = Color(0.992157, 0.0117647, 0.0666667, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rm4v2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bkxwk"]
seamless = true
noise = SubResource("FastNoiseLite_rm4v2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vxx6"]
albedo_color = Color(0.466667, 0.247059, 0.196078, 1)
albedo_texture = SubResource("NoiseTexture2D_bkxwk")
uv1_scale = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_5clia"]
material = SubResource("StandardMaterial3D_3vxx6")
size = Vector3(10, 0.01, 10)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s7ov1"]
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 0.1
initial_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
turbulence_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01e43"]
billboard_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_ve1o1"]
material = SubResource("StandardMaterial3D_01e43")
size = Vector2(0.01, 0.01)

[sub_resource type="QuadMesh" id="QuadMesh_pe2h3"]
size = Vector2(0.2, 0.2)
subdivide_width = 3
subdivide_depth = 3

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hm6ix"]
noise_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_41oy1"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_hm6ix")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nmd4x"]
render_priority = 0
shader = ExtResource("7_y45hs")
shader_parameter/point_scale = 14.0
shader_parameter/colormixweight = 0.5
shader_parameter/position_noise = SubResource("NoiseTexture2D_41oy1")

[sub_resource type="TorusMesh" id="TorusMesh_ihr40"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_um3xr"]
metallic = 1.0
roughness = 0.0

[sub_resource type="SphereShape3D" id="SphereShape3D_mwyyj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kh1d1"]
particle_flag_align_y = true
angle_max = 180.0
inherit_velocity_ratio = 0.02
spread = 180.0
initial_velocity_min = 0.02
initial_velocity_max = 0.02
gravity = Vector3(0, 0, 0)
hue_variation_max = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1ntmg"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wu078"]
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_1ntmg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2e6a"]
render_priority = 0
shader = ExtResource("10_v7fox")
shader_parameter/albedo = null
shader_parameter/point_size = 1.0
shader_parameter/streamrad = 1.0
shader_parameter/sparkrad = 0.1
shader_parameter/sparktrailrad = 0.04
shader_parameter/position_noise = SubResource("NoiseTexture2D_wu078")

[sub_resource type="PlaneMesh" id="PlaneMesh_2mr64"]
material = SubResource("ShaderMaterial_d2e6a")
size = Vector2(0, 0)
subdivide_depth = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_qximi"]
size = Vector3(10, 1, 10)

[sub_resource type="Curve" id="Curve_0vw2q"]
_data = [Vector2(0, 0.984988), 0.0, 0.0, 0, 0, Vector2(0.98659, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_toorp"]
curve = SubResource("Curve_0vw2q")

[sub_resource type="Curve" id="Curve_fgc8a"]
_data = [Vector2(0.0325671, 0.234411), 0.0, 0.0, 0, 0, Vector2(0.522988, 0.439569), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_lsdrr"]
curve = SubResource("Curve_fgc8a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f5iym"]
emission_shape = 6
emission_ring_axis = Vector3(1, 0, 0)
emission_ring_height = 0.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.7
spread = 0.0
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_lsdrr")
color = Color(0.752941, 1, 0.00784314, 1)
alpha_curve = SubResource("CurveTexture_toorp")
turbulence_noise_scale = 1.0
turbulence_influence_min = 0.01
turbulence_influence_max = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k1ko2"]
transparency = 3
alpha_hash_scale = 1.0
alpha_antialiasing_mode = 0
vertex_color_use_as_albedo = true
emission = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_xl765"]
material = SubResource("StandardMaterial3D_k1ko2")
size = Vector3(0.02, 0.04, 0.02)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cnwuy"]

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_f54mh"]
noise = SubResource("FastNoiseLite_cnwuy")

[node name="Main" type="Node3D"]
script = ExtResource("1_cagca")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.972307, 0.231448, -0.0324247, -0.168036, 0.788752, 0.591299, 0.16243, -0.569476, 0.8058, 0, 4.78147, -0.461351)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xu52")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="SpotLight3DRight" type="SpotLight3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.167027, 0, 0)
light_volumetric_fog_energy = 5.651
spot_attenuation = 1.18921
spot_angle = 25.0
spot_angle_attenuation = 0.183011

[node name="SpotLight3Left" type="SpotLight3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.167, 0, 0)
spot_attenuation = 1.18921
spot_angle = 25.0
spot_angle_attenuation = 0.183011

[node name="XRController3DLeft" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/XRController3DLeft"]
visible = false
mesh = SubResource("BoxMesh_d0w3a")

[node name="XRController3DRight" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"grip"

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/XRController3DRight"]
visible = false
mesh = SubResource("BoxMesh_fmqho")

[node name="HandJoints" type="Node3D" parent="XROrigin3D"]
script = ExtResource("4_eaqi8")

[node name="Joints3D" type="Node3D" parent="XROrigin3D/HandJoints"]

[node name="FrontOfPlayer" type="Node3D" parent="XROrigin3D/HandJoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65802, -0.491668)

[node name="FlatDisplayMesh" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.169554, -0.0442287)
mesh = SubResource("QuadMesh_eslsg")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_6gabm")

[node name="SubViewport" type="SubViewport" parent="XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh"]
size = Vector2i(800, 500)

[node name="FlatDisplay" parent="XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh/SubViewport" instance=ExtResource("3_o8mx1")]

[node name="Joints2D" type="Node3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]

[node name="FingerButton" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
mesh = SubResource("SphereMesh_65vmt")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_brx0b")

[node name="Touched" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer/FingerButton"]
visible = false
mesh = SubResource("BoxMesh_yct16")
surface_material_override/0 = SubResource("StandardMaterial3D_g60ck")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="XROrigin3D/HandJoints/FrontOfPlayer/FingerButton"]
stream = ExtResource("5_qinxx")

[node name="XRSimulator" parent="XROrigin3D" instance=ExtResource("4_pcb8h")]
xr_origin = NodePath("..")

[node name="MeshInstance3DFloor" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_5clia")
skeleton = NodePath("../XROrigin3D")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18932, 1.7242, -0.382231)
visible = false
amount = 980
lifetime = 1.9
trail_lifetime = 1.87
process_material = SubResource("ParticleProcessMaterial_s7ov1")
draw_pass_1 = SubResource("PlaneMesh_ve1o1")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_db5t8")
attenuation_model = 1
bus = &"test"

[node name="CollisionSpots" type="Node3D" parent="."]
script = ExtResource("5_h5o8j")

[node name="PointShader" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 1.8, -0.5)
visible = false
script = ExtResource("6_yro76")

[node name="PointMesh" type="MeshInstance3D" parent="PointShader"]
mesh = SubResource("QuadMesh_pe2h3")
surface_material_override/0 = SubResource("ShaderMaterial_nmd4x")

[node name="ShiinyTorus" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.73205, -0.5, 0, 1, 0.866025, 0, 0.479736, -3.0724)
mesh = SubResource("TorusMesh_ihr40")
surface_material_override/0 = SubResource("StandardMaterial3D_um3xr")

[node name="TinselBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.73451, -1.54059)
gravity_scale = 0.4
linear_velocity = Vector3(1, 0, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TinselBody"]
shape = SubResource("SphereShape3D_mwyyj")

[node name="GPUParticles3Dtinsel" type="GPUParticles3D" parent="TinselBody"]
emitting = false
amount = 150
lifetime = 3.0
one_shot = true
process_material = SubResource("ParticleProcessMaterial_kh1d1")
draw_pass_1 = SubResource("PlaneMesh_2mr64")

[node name="CollisionWalls" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="CollisionWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionWalls/Floor"]
shape = SubResource("BoxShape3D_qximi")

[node name="Wall" type="StaticBody3D" parent="CollisionWalls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 4, -5.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionWalls/Wall"]
shape = SubResource("BoxShape3D_qximi")

[node name="Wall2" type="StaticBody3D" parent="CollisionWalls"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 5.5, 4, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionWalls/Wall2"]
shape = SubResource("BoxShape3D_qximi")

[node name="Wall3" type="StaticBody3D" parent="CollisionWalls"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -5.5, 4, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionWalls/Wall3"]
shape = SubResource("BoxShape3D_qximi")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0342484, 2.57414, 2.6726)
amount = 12500
lifetime = 3.0
speed_scale = 0.5
explosiveness = 0.5
process_material = SubResource("ParticleProcessMaterial_f5iym")
draw_passes = 2
draw_pass_1 = SubResource("BoxMesh_xl765")
draw_pass_2 = null

[node name="GPUParticlesAttractorVectorField3D" type="GPUParticlesAttractorVectorField3D" parent="GPUParticles3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34489, 0, -0.396912)
visible = false
texture = SubResource("NoiseTexture3D_f54mh")

[node name="GPUParticlesAttractorSphere3D" type="GPUParticlesAttractorSphere3D" parent="GPUParticles3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1226, 0.514691, 0.924217)
strength = 3.0
attenuation = 0.00377319

[node name="GPUParticlesAttractorBox3D" type="GPUParticlesAttractorBox3D" parent="GPUParticles3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.87785, -0.490049, 0.322819)
attenuation = 0.00754637
directionality = 0.5
size = Vector3(3, 3, 3)

[connection signal="button_pressed" from="XROrigin3D/XRController3DLeft" to="." method="_on_xr_controller_3d_left_button_pressed"]
